# nicheflow

./: .gitignore  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml
configs/: train.yaml
configs/callbacks/: default.yaml
configs/data/: ct_abd.yaml  ct_base.yaml  ct_mba.yaml  ct_med.yaml  nicheflow_abd.yaml  nicheflow_base.yaml  nicheflow_mba.yaml  nicheflow_med.yaml  rpc_abd.yaml  rpc_and_sp_base.yaml  rpc_mba.yaml  rpc_med.yaml  sp_abd.yaml  sp_mba.yaml  sp_med.yaml
configs/experiment/classifier/: abd.yaml  mba.yaml  med.yaml
configs/experiment/nicheflow/cfm/: abd.yaml  mba.yaml  (+1 more)
configs/launcher/: slurm.yaml
configs/logger/: tensorboard.yaml  wandb.yaml
configs/model/: classifier.yaml  point_cloud_transformer_cfm.yaml  point_cloud_transformer_glvfm.yaml  point_cloud_transformer_gvfm.yaml  single_point_cfm.yaml  single_point_glvfm.yaml  single_point_gvfm.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml  iterative_gpu.yaml
docs/: NEW_DATASETS.md  REPRODUCIBILITY.md
nicheflow/: __init__.py  eval_state_dict_ckpts.py  eval_state_dict_ckpts_kregion_ablations.py  eval_state_dict_ckpts_ot_ablations.py  train.py
nicheflow/datamodules/: __init__.py  h5ad_ct_datamodule.py  microenv_datamodule.py  sp_and_rpc_datamodule.py
nicheflow/datasets/: __init__.py  h5ad_ct_dataset.py  microenv_dataset.py  rpc_dataset.py  st_dataset_base.py
nicheflow/models/: __init__.py  ct_classifier.py  flows.py  losses.py
nicheflow/models/backbones/: __init__.py  pc_transformer.py  spmlp.py
nicheflow/preprocessing/: __init__.py  h5ad_dataset_type.py  h5ad_preprocessor.py
nicheflow/tasks/: __init__.py  ct_classification.py  flow_matching.py
nicheflow/transforms/: __init__.py  one_hot_encode_slice.py
nicheflow/utils/: __init__.py  dataloading.py  datasets.py  insantiators.py  log.py  plots.py  preprocessing.py  seed.py
notebooks/: download_and_preprocess.ipynb  print_eval_results.ipynb
(+24 files in other folders)
